# age

./: .clang_complete  .directory  .hgtags  CMakeLists.txt  age-config.cmake.in  age-configversion.cmake.in  age.kdev4  settings.vim  tags  types_c.taghl
.kdev4/: age.kdev4  gqe.kdev4
cmake/: Config.cmake  Macros.cmake
cmake/Modules/: FindSFML.cmake
doc/: CMakeLists.txt  doxyfile.in  mainpage.hpp
examples/spacedots/src/: GameState.cpp  GameState.hpp  SpaceDotsApp.cpp  SpaceDotsApp.hpp  main.cpp
examples/tictactoe/src/: GameState.cpp  GameState.hpp  TicTacToeApp.cpp  TicTacToeApp.hpp  main.cpp
extlibs/headers/include/SFML/Graphics/: Shape.hpp  Text.hpp
extlibs/headers/lib/: libsfml-audio.so.2.3.2  libsfml-graphics.so.2.3.2  libsfml-network.so.2.3.2  libsfml-system.so.2.3.2  libsfml-window.so.2.3.2
include/AGE/: Config.hpp  Core.hpp
include/AGE/Core/: Core_types.hpp
include/AGE/Core/assets/: ConfigAsset.hpp  ConfigHandler.hpp  FontAsset.hpp  FontHandler.hpp  ImageAsset.hpp  ImageHandler.hpp  MusicAsset.hpp  MusicHandler.hpp  SoundAsset.hpp  SoundHandler.hpp
include/AGE/Core/classes/: AssetManager.hpp  ConfigReader.hpp  EventManager.hpp  PropertyManager.hpp  StatManager.hpp  StateManager.hpp
include/AGE/Core/interfaces/: .kdev_include_paths  Game.hpp  IAssetHandler.hpp  IEvent.hpp  ILogger.hpp  IProperty.hpp  IState.hpp  TAsset.hpp  TAssetHandler.hpp  TEvent.hpp  TProperty.hpp
include/AGE/Core/loggers/: FatalLogger.hpp  FileLogger.hpp  Log_macros.hpp  ScopeLogger.hpp  StringLogger.hpp
include/AGE/Core/states/: SplashState.hpp
include/AGE/Core/utils/: CRC32.hpp  StringUtil.hpp
include/GQE/Core/assets/: ConfigHandler.hpp  FontHandler.hpp  ImageHandler.hpp  MusicHandler.hpp  SoundHandler.hpp
include/GQE/Core/classes/: AssetManager.hpp  ConfigReader.hpp  EventManager.hpp  PropertyManager.hpp  StatManager.hpp  StateManager.hpp
include/GQE/Core/interfaces/: IApp.hpp  IAssetHandler.hpp  IEvent.hpp  ILogger.hpp  IProperty.hpp  IState.hpp  TAsset.hpp  TAssetHandler.hpp  TEvent.hpp  TProperty.hpp
include/GQE/Core/loggers/: FileLogger.hpp  Log_macros.hpp  ScopeLogger.hpp  StringLogger.hpp
include/GQE/Core/states/: SplashState.hpp
include/GQE/Core/utils/: StringUtil.hpp
include/GQE/Entity/: Entity_types.hpp
include/GQE/Entity/classes/: ActionGroup.hpp  Instance.hpp  Prototype.hpp  PrototypeManager.hpp
include/GQE/Entity/interfaces/: IAction.hpp  IEntity.hpp  ISystem.hpp
include/GQE/Entity/systems/: ActionSystem.hpp  AnimationSystem.hpp  MovementSystem.hpp  RenderSystem.hpp
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  Release_shared.properties  configurations.xml
src/AGE/: CMakeLists.txt  Makefile  cmake_install.cmake
src/AGE/Core/: CMakeLists.txt  Core_types.cpp  Makefile  cmake_install.cmake
src/AGE/Core/assets/: ConfigAsset.cpp  ConfigHandler.cpp  FontAsset.cpp  FontHandler.cpp  ImageAsset.cpp  ImageHandler.cpp  MusicAsset.cpp  MusicHandler.cpp  SoundAsset.cpp  SoundHandler.cpp
src/AGE/Core/classes/: AssetManager.cpp  ConfigReader.cpp  EventManager.cpp  PropertyManager.cpp  StatManager.cpp  StateManager.cpp
src/AGE/Core/interfaces/: Game.cpp  IAssetHandler.cpp  IEvent.cpp  ILogger.cpp  IProperty.cpp  IState.cpp
src/AGE/Core/loggers/: FatalLogger.cpp  FileLogger.cpp  ScopeLogger.cpp  StringLogger.cpp
src/AGE/Core/states/: SplashState.cpp
src/AGE/Core/utils/: StringUtil.cpp
src/GQE/Core/assets/: ConfigHandler.cpp  FontHandler.cpp  ImageAsset.cpp  ImageHandler.cpp  MusicHandler.cpp  SoundHandler.cpp
src/GQE/Core/classes/: AssetManager.cpp  ConfigReader.cpp  EventManager.cpp  PropertyManager.cpp  StatManager.cpp  StateManager.cpp
src/GQE/Core/interfaces/: IApp.cpp  IAssetHandler.cpp  IEvent.cpp  ILogger.cpp  IProperty.cpp  IState.cpp
src/GQE/Core/loggers/: FatalLogger.cpp  FileLogger.cpp  ScopeLogger.cpp  StringLogger.cpp
src/GQE/Core/states/: SplashState.cpp
src/GQE/Core/utils/: StringUtil.cpp
src/GQE/Entity/classes/: ActionGroup.cpp  Instance.cpp  Prototype.cpp  PrototypeManager.cpp
src/GQE/Entity/interfaces/: IAction.cpp  IEntity.cpp  ISystem.cpp
src/GQE/Entity/systems/: ActionSystem.cpp  AnimationSystem.cpp  MovementSystem.cpp  RenderSystem.cpp
